Revamped Sign In Page * Fixed the functionality of the sign in page and replaced css modules. * Wrapped the Application component with Authentication.

--- a/src/components/SignIn/signInPageStyles.css
+++ b/src/components/SignIn/signInPageStyles.css
@@ -15,6 +15,9 @@
   padding-right: 12px;
   height: 380px;
   transition: height .5s ease;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2),
+  0 1px 1px 0 rgba(0, 0, 0, 0.14),
+  0 4px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 .navigation {
